--- a/index.html
+++ b/index.html
@@ -49,12 +49,14 @@
             </section>
             <article class="photo-section">
                 <h2 class="header-secondary">Czym się zajmujemy</h2>
-                <section class="photo 1"><img src="./images/img.jpg" height="294" width="370"
-                        alt="photo shows person typing on apple keyboard"></section>
-                <section class="photo 2"><img src="./images/img2.jpg" height="294" width="370"
-                        alt="Photo shows a person looking at laptop"></section>
-                <section class="photo 3"><img src="./images/box3.jpg" height="294" width="370"
-                        alt="Photo shows a person looking at tablet"></section>
+                <ul class="photos-list">
+                    <li class="photo 1"><img src="./images/img.jpg" height="294" width="370"
+                            alt="photo shows person typing on apple keyboard"></li>
+                    <li class="photo 2"><img src="./images/img2.jpg" height="294" width="370"
+                            alt="Photo shows a person looking at laptop"></li>
+                    <li class="photo 3"><img src="./images/box3.jpg" height="294" width="370"
+                            alt="Photo shows a person looking at tablet"></li>
+                </ul>
             </article>
         </article>
         <article class="team-section">
