--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="pl-PL">
 
 <head>
     <meta charset="UTF-8">
@@ -9,81 +9,78 @@
 </head>
 
 <body>
-    <header class="main">
-        <nav class="main-navigation">
-            <ul>
-                <li class="logo"><a href="index.html" target="_blank" rel="noopener noreferrer">WebStudio</a></li>
-                <li class="menu">Agencja</li>
-                <li class="menu">Portfolio</li>
-                <li class="menu">Kontakt</li>
-            </ul>
+    <header>
+        <div><a href="index.html" target="_blank" rel="noopener noreferrer">WebStudio</a></div>
+        <nav>
+            <a href="#">Agencja</a>
+            <a href="#">Portfolio</a>
+            <a href="#">Kontakt</a>
         </nav>
-        <section class="kontant-info">
-            <p class="mail">mailto:info@devstudio.com</p>
-            <p class="phone">tel:+48 111 111 111</p>
+        <section>
+            <a href="mailto:info@devstudio.com">info@example.com</a>
+            <a href="tel:+48 111 111 111">+48 111 111 111</a>
         </section>
     </header>
-    <main class="main-content">
-        <article class="slider-container">
-            <section class="slider">
-                <h1 class="header-primary">Efektywne rozwiązania dla waszego biznesu</h1>
-                <button type="button" class="order-service">Zamów usługe</button>
-            </section>
-        </article>
-        <article class="services">
-            <section class="examples">
-                <section class="example">
-                    <h3 class="">Lorem ipsum</h3>
-                    <p class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, vitae!</p>
-                </section>
+    <main>
 
-                <section class="example">
-                    <h3 class="">Lorem ipsum</h3>
-                    <p class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, vitae!</p>
-                </section>
+        <section>
+            <h1>Efektywne rozwiązania dla waszego biznesu</h1>
+            <button type="button">Zamów usługe</button>
+        </section>
 
-                <section class="example">
-                    <h3 class="">Lorem ipsum</h3>
-                    <p class="description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, vitae!</p>
-                </section>
+
+        <section>
+            <section>
+                <h3>Lorem ipsum</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, vitae!</p>
             </section>
-            <article class="photo-section">
-                <h2 class="header-secondary">Czym się zajmujemy</h2>
-                <ul class="photos-list">
-                    <li class="photo 1"><img src="./images/img.jpg" height="294" width="370"
-                            alt="photo shows person typing on apple keyboard"></li>
-                    <li class="photo 2"><img src="./images/img2.jpg" height="294" width="370"
-                            alt="Photo shows a person looking at laptop"></li>
-                    <li class="photo 3"><img src="./images/box3.jpg" height="294" width="370"
-                            alt="Photo shows a person looking at tablet"></li>
-                </ul>
-            </article>
-        </article>
-        <article class="team-section">
-            <section class="team-container">
-                <h2 class="header-secondary">Nasz zespół</h2>
-                <ul class="team">
-                    <li class="teammate"><img src="./images/stuff.jpg" height="260" width="270"
-                            alt="photo of Product Manager - John Doe"></li>
-                    <li class="teammate"><img src="./images/stuff2.jpg" height="260" width="270"
-                            alt="photo of Frontend Developer - John Doe"></li>
-                    <li class="teammate"><img src="./images/stuff3.jpg" height="260" width="270"
-                            alt="photo of Marketing Specialist - John Doe"></li>
-                    <li class="teammate"><img src="./images/stuff4.jpg" height="260" width="270"
-                            alt="photo of UI Designer - John Doe"></li>
-                </ul>
+
+            <section>
+                <h3>Lorem ipsum</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, vitae!</p>
             </section>
-        </article>
-    </main>
-    <footer class="footer">
-        <address class="info">
+
+            <section>
+                <h3>Lorem ipsum</h3>
+                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, vitae!</p>
+            </section>
+        </section>
+
+        <h2>Czym się zajmujemy</h2>
+        <ul>
+            <li><img src="./images/img.jpg" height="294" width="370" alt="photo shows person typing on apple keyboard">
+            </li>
+            <li><img src="./images/img2.jpg" height="294" width="370" alt="Photo shows a person looking at laptop"></li>
+            <li><img src="./images/box3.jpg" height="294" width="370" alt="Photo shows a person looking at tablet"></li>
+        </ul>
+
+
+        <section>
+            <h2>Nasz zespół</h2>
             <ul>
-                <li class="logo"><a href="index.html" target="_blank" rel="noopener noreferrer">WebStudio</a></li>
-                <li class="adress">m. Warszawa, Aleje Jerozolimskie 21</li>
-                <li class="mail">mailto:info@example.com</li>
-                <li class="phone">tel:+48 111 111 111</li>
+                <li><img src="./images/stuff.jpg" height="260" width="270" alt="photo of Product Manager - John Doe">
+                </li>
+                <li><img src="./images/stuff2.jpg" height="260" width="270"
+                        alt="photo of Frontend Developer - John Doe"></li>
+                <li><img src="./images/stuff3.jpg" height="260" width="270"
+                        alt="photo of Marketing Specialist - John Doe"></li>
+                <li><img src="./images/stuff4.jpg" height="260" width="270" alt="photo of UI Designer - John Doe">
+                </li>
             </ul>
+        </section>
+
+    </main>
+    <footer>
+        <div>
+            <a href="index.html" target="_blank" rel="noopener noreferrer">WebStudio</a>
+        </div>
+        <address>
+            m. Warszawa, Aleje Jerozolimskie 21
         </address>
+        <div>
+            <a href="mailto:info@example.com">info@example.com</a>
+            <a href="tel:+48 111 111 111">+48 111 111 111</a>
+        </div>
     </footer>
 </body>
 
