--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
         <section>
             <a href="mailto:info@devstudio.com">info@example.com</a>
-            <a href="tel:+48 111 111 111">+48 111 111 111</a>
+            <a href="tel:+48111111111">+48 111 111 111</a>
         </section>
     </header>
     <main>
