--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </address>
         <div>
             <a href="mailto:info@example.com">info@example.com</a>
-            <a href="tel:+48 111 111 111">+48 111 111 111</a>
+            <a href="tel:+48 111111111">+48 111 111 111</a>
         </div>
     </footer>
 </body>
