--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <a href="#">Portfolio</a>
             <a href="#">Kontakt</a>
         </nav>
-        <section>
+        <div>
             <a href="mailto:info@devstudio.com">info@example.com</a>
-            <a href="tel:+48111111111">+48 111 111 111</a>
-        </section>
+            <a href="tel:+48111111111">+48111111111</a>
+        </div>
     </header>
     <main>
 
@@ -30,30 +30,33 @@
 
 
         <section>
-            <section>
+            <article>
                 <h3>Lorem ipsum</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, vitae!</p>
-            </section>
+            </article>
 
-            <section>
+            <article>
                 <h3>Lorem ipsum</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, vitae!</p>
-            </section>
+            </article>
 
-            <section>
+            <article>
                 <h3>Lorem ipsum</h3>
                 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, vitae!</p>
-            </section>
+            </article>
         </section>
-
-        <h2>Czym się zajmujemy</h2>
-        <ul>
-            <li><img src="./images/img.jpg" height="294" width="370" alt="photo shows person typing on apple keyboard">
-            </li>
-            <li><img src="./images/img2.jpg" height="294" width="370" alt="Photo shows a person looking at laptop"></li>
-            <li><img src="./images/box3.jpg" height="294" width="370" alt="Photo shows a person looking at tablet"></li>
-        </ul>
-
+        <section>
+            <h2>Czym się zajmujemy</h2>
+            <ul>
+                <li><img src="./images/img.jpg" height="294" width="370"
+                        alt="photo shows person typing on apple keyboard">
+                </li>
+                <li><img src="./images/img2.jpg" height="294" width="370" alt="Photo shows a person looking at laptop">
+                </li>
+                <li><img src="./images/box3.jpg" height="294" width="370" alt="Photo shows a person looking at tablet">
+                </li>
+            </ul>
+        </section>
 
         <section>
             <h2>Nasz zespół</h2>
@@ -76,11 +79,9 @@
         </div>
         <address>
             m. Warszawa, Aleje Jerozolimskie 21
-        </address>
-        <div>
             <a href="mailto:info@example.com">info@example.com</a>
-            <a href="tel:+48 111111111">+48 111 111 111</a>
-        </div>
+            <a href="tel:+48111111111">+48111111111</a>
+        </address>
     </footer>
 </body>
 
