--- a/index.html
+++ b/index.html
@@ -6,17 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Studio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <header>
-        <div><a href="index.html" target="_blank" rel="noopener noreferrer">WebStudio</a></div>
-        <nav>
+    <header class="header">
+        <div class="logo"><a href="index.html" target="_blank" rel="noopener noreferrer">WebStudio</a></div>
+        <nav class="menu">
             <a href="#">Agencja</a>
-            <a href="#">Portfolio</a>
+            <a href="./portfolio.html">Portfolio</a>
             <a href="#">Kontakt</a>
         </nav>
-        <div>
+        <div class="contact">
             <a href="mailto:info@devstudio.com">info@example.com</a>
             <a href="tel:+48111111111">+48111111111</a>
         </div>
