--- a/portfolio.html
+++ b/portfolio.html
@@ -6,25 +6,85 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <header>
-        <div><a href="index.html" target="_blank" rel="noopener noreferrer">WebStudio</a></div>
-        <nav>
+    <header class="header">
+        <div class="logo"><a href="index.html" target="_blank" rel="noopener noreferrer">WebStudio</a></div>
+        <nav class="menu">
             <a href="#">Agencja</a>
-            <a href="#">Portfolio</a>
+            <a href="./portfolio.html">Portfolio</a>
             <a href="#">Kontakt</a>
         </nav>
-        <div>
+        <div class="contact">
             <a href="mailto:info@devstudio.com">info@example.com</a>
             <a href="tel:+48111111111">+48111111111</a>
         </div>
     </header>
-    <main>
-
-
-
+    <main class="main-content">
+        <section class="filters">
+            <button class="filter">Wszyskie</button>
+            <button class="filter">Strony</button>
+            <button class="filter">Aplikacje</button>
+            <button class="filter">Dizajn</button>
+            <button class="filter">Marketing</button>
+        </section>
+        <section class="products">
+            <div class="product sites">
+                <img src="./images/laptop.jpg" alt="laptop ze widokiem na stronę www" width="370" height="294">
+                <h3 class="title">Technocrack</h3>
+                <p class="category-name">Strona internetowa</p>
+            </div>
+            <div class="product design">
+                <img src="./images/curry-poster.jpg"
+                    alt="plakat przedstawiający dwóch graczy. Jeden z zespołu Golden State Warriors, drugi z zespołu New Orlean Pelicans"
+                    width="370" height="294">
+                <h3 class="title">Grafika New Orlean vs Golden Star</h3>
+                <p class="category-name">Dizajn</p>
+            </div>
+            <div class="product app">
+                <img src="./images/seafood-restaurant.jpg" alt="logo restauracji seafood" width="370" height="294">
+                <h3 class="title" Restauracja Seafood></h3>
+                <p class="category-name">Aplikacja</p>
+            </div>
+            <div class="product marketing">
+                <img src="./images/headphones.jpg" alt="słuchawki nauszne" width="370" height="294">
+                <h3 class="title">Projekt Prime</h3>
+                <p class="category-name">Marketing</p>
+            </div>
+            <div class="product app">
+                <img src="./images/boxes.jpg" alt="dwa pudełka kartonowe" width="370" height="294">
+                <h3 class="title">Projekt Boxes</h3>
+                <p class="category-name">Aplikacja</p>
+            </div>
+            <div class="product sites">
+                <img src="./images/screen.jpg" alt="monitor wyświetlający stronę internetową" width="370" height="294">
+                <h3 class="title">Inspiration has no Borders</h3>
+                <p class="category-name">Strona internetowa</p>
+            </div>
+            <div class="product design">
+                <img src="./images/magazine.jpg" alt="magazyn" width="370" height="294">
+                <h3 class="title">Magazyn Limited Edition</h3>
+                <p class="category-name">Dizajn</p>
+            </div>
+            <div class="product marketing">
+                <img src="./images/tag.jpg" alt="zawieszka z nazwą firmy" width="370" height="294">
+                <h3 class="title">Projekt LAB</h3>
+                <p class="category-name">Marketing</p>
+            </div>
+            <div class="product app">
+                <img src="./images/macbook.jpg" alt="zdjęcie przedstawia macbooka oraz ręce osoby, która go używa"
+                    width="370" height="294">
+                <h3 class="title">Growing Business</h3>
+                <p class="category-name">Aplikacja</p>
+            </div>
+        </section>
     </main>
     <footer>
         <div>
