--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header class="header">
-        <div class="logo"><a href="index.html" target="_blank" rel="noopener noreferrer">WebStudio</a></div>
+        <p class="logo"><span class="web-color">Web</span>Studio</p>
         <nav class="menu">
             <a href="#">Agencja</a>
             <a href="./portfolio.html">Portfolio</a>
@@ -27,7 +27,7 @@
             <a href="tel:+48111111111">+48111111111</a>
         </div>
     </header>
-    <main>
+    <main class="main-content">
 
         <section>
             <h1>Efektywne rozwiązania dla waszego biznesu</h1>
@@ -76,9 +76,9 @@
         </section>
 
     </main>
-    <footer>
+    <footer class="footer">
         <div>
-            <a href="index.html" target="_blank" rel="noopener noreferrer">WebStudio</a>
+            <p class="logo"><span class="web-color">Web</span>Studio</p>
         </div>
         <address>
             m. Warszawa, Aleje Jerozolimskie 21
