--- a/portfolio.html
+++ b/portfolio.html
@@ -15,8 +15,8 @@
 </head>
 
 <body>
-    <header class="header">
-        <div class="logo"><a href="index.html" target="_blank" rel="noopener noreferrer">WebStudio</a></div>
+    <header class="header line">
+        <p class="logo"><span class="web-color">Web</span>Studio</p>
         <nav class="menu">
             <a href="#">Agencja</a>
             <a href="./portfolio.html">Portfolio</a>
@@ -27,68 +27,71 @@
             <a href="tel:+48111111111">+48111111111</a>
         </div>
     </header>
-    <main class="main-content">
-        <section class="filters">
-            <button class="filter">Wszyskie</button>
-            <button class="filter">Strony</button>
-            <button class="filter">Aplikacje</button>
-            <button class="filter">Dizajn</button>
-            <button class="filter">Marketing</button>
-        </section>
+    <main class="main-container">
+        <div class="filters">
+            <button type="button" class="filter">Wszyskie</button>
+            <button type="button" class="filter">Strony</button>
+            <button type="button" class="filter">Aplikacje</button>
+            <button type="button" class="filter">Dizajn</button>
+            <button type="button" class="filter">Marketing</button>
+        </div>
         <section class="products">
-            <div class="product sites">
-                <img src="./images/laptop.jpg" alt="laptop ze widokiem na stronę www" width="370" height="294">
-                <h3 class="title">Technocrack</h3>
-                <p class="category-name">Strona internetowa</p>
-            </div>
-            <div class="product design">
-                <img src="./images/curry-poster.jpg"
-                    alt="plakat przedstawiający dwóch graczy. Jeden z zespołu Golden State Warriors, drugi z zespołu New Orlean Pelicans"
-                    width="370" height="294">
-                <h3 class="title">Grafika New Orlean vs Golden Star</h3>
-                <p class="category-name">Dizajn</p>
-            </div>
-            <div class="product app">
-                <img src="./images/seafood-restaurant.jpg" alt="logo restauracji seafood" width="370" height="294">
-                <h3 class="title" Restauracja Seafood></h3>
-                <p class="category-name">Aplikacja</p>
-            </div>
-            <div class="product marketing">
-                <img src="./images/headphones.jpg" alt="słuchawki nauszne" width="370" height="294">
-                <h3 class="title">Projekt Prime</h3>
-                <p class="category-name">Marketing</p>
-            </div>
-            <div class="product app">
-                <img src="./images/boxes.jpg" alt="dwa pudełka kartonowe" width="370" height="294">
-                <h3 class="title">Projekt Boxes</h3>
-                <p class="category-name">Aplikacja</p>
-            </div>
-            <div class="product sites">
-                <img src="./images/screen.jpg" alt="monitor wyświetlający stronę internetową" width="370" height="294">
-                <h3 class="title">Inspiration has no Borders</h3>
-                <p class="category-name">Strona internetowa</p>
-            </div>
-            <div class="product design">
-                <img src="./images/magazine.jpg" alt="magazyn" width="370" height="294">
-                <h3 class="title">Magazyn Limited Edition</h3>
-                <p class="category-name">Dizajn</p>
-            </div>
-            <div class="product marketing">
-                <img src="./images/tag.jpg" alt="zawieszka z nazwą firmy" width="370" height="294">
-                <h3 class="title">Projekt LAB</h3>
-                <p class="category-name">Marketing</p>
-            </div>
-            <div class="product app">
-                <img src="./images/macbook.jpg" alt="zdjęcie przedstawia macbooka oraz ręce osoby, która go używa"
-                    width="370" height="294">
-                <h3 class="title">Growing Business</h3>
-                <p class="category-name">Aplikacja</p>
-            </div>
+            <ul class="products-list">
+                <li class="product sites">
+                    <img src="./images/laptop.jpg" alt="laptop ze widokiem na stronę www" width="370" height="294">
+                    <h3 class="title">Technocrack</h3>
+                    <p class="category-name">Strona internetowa</p>
+                </li>
+                <li class="product design">
+                    <img src="./images/curry-poster.jpg"
+                        alt="plakat przedstawiający dwóch graczy. Jeden z zespołu Golden State Warriors, drugi z zespołu New Orlean Pelicans"
+                        width="370" height="294">
+                    <h3 class="title">Grafika New Orlean vs Golden Star</h3>
+                    <p class="category-name">Dizajn</p>
+                </li>
+                <li class="product app">
+                    <img src="./images/seafood-restaurant.jpg" alt="logo restauracji seafood" width="370" height="294">
+                    <h3 class="title" Restauracja Seafood></h3>
+                    <p class="category-name">Aplikacja</p>
+                </li>
+                <li class="product marketing">
+                    <img src="./images/headphones.jpg" alt="słuchawki nauszne" width="370" height="294">
+                    <h3 class="title">Projekt Prime</h3>
+                    <p class="category-name">Marketing</p>
+                </li>
+                <li class="product app">
+                    <img src="./images/boxes.jpg" alt="dwa pudełka kartonowe" width="370" height="294">
+                    <h3 class="title">Projekt Boxes</h3>
+                    <p class="category-name">Aplikacja</p>
+                </li>
+                <li class="product sites">
+                    <img src="./images/screen.jpg" alt="monitor wyświetlający stronę internetową" width="370"
+                        height="294">
+                    <h3 class="title">Inspiration has no Borders</h3>
+                    <p class="category-name">Strona internetowa</p>
+                </li>
+                <li class="product design">
+                    <img src="./images/magazine.jpg" alt="magazyn" width="370" height="294">
+                    <h3 class="title">Magazyn Limited Edition</h3>
+                    <p class="category-name">Dizajn</p>
+                </li>
+                <li class="product marketing">
+                    <img src="./images/tag.jpg" alt="zawieszka z nazwą firmy" width="370" height="294">
+                    <h3 class="title">Projekt LAB</h3>
+                    <p class="category-name">Marketing</p>
+                </li>
+                <li class="product app">
+                    <img src="./images/macbook.jpg" alt="zdjęcie przedstawia macbooka oraz ręce osoby, która go używa"
+                        width="370" height="294">
+                    <h3 class="title">Growing Business</h3>
+                    <p class="category-name">Aplikacja</p>
+                </li>
+            </ul>
         </section>
     </main>
-    <footer>
+    <footer class="footer">
         <div>
-            <a href="index.html" target="_blank" rel="noopener noreferrer">WebStudio</a>
+            <p class="logo"><span class="web-color">Web</span>Studio</p>
         </div>
         <address>
             m. Warszawa, Aleje Jerozolimskie 21
