--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
 
 <body>
     <header class="header line">
-        <p class="logo"><span class="web-color">Web</span>Studio</p>
+        <p class="logo"><a href="./index.html"><span class="web-color">Web</span>Studio</a></p>
         <nav class="menu">
             <a href="#">Agencja</a>
             <a href="./portfolio.html">Portfolio</a>
@@ -90,7 +90,7 @@
         </section>
     </main>
     <footer class="footer">
-        <div>
+        <div class="logo-container">
             <p class="logo"><span class="web-color">Web</span>Studio</p>
         </div>
         <address>
