styling index and portfolio
styling index and portfolio adding classes, organising css code

--- a/index.html
+++ b/index.html
@@ -29,27 +29,31 @@
     </header>
     <main class="main-content">
 
-        <section>
+        <section class="landing">
             <h1>Efektywne rozwiązania dla waszego biznesu</h1>
-            <button type="button">Zamów usługe</button>
-
-            <article>
-                <h2>Lorem ipsum</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, vitae!</p>
+            <button class="btn order" type="button">Zamów usługe</button>
+        </section>
+        <section class="our-strengths">
+            <article class="strengths-article">
+                <h3 class="strengths-header">Lorem ipsum</h3>
+                <p class="strengths-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, vitae!
+                </p>
             </article>
 
-            <article>
-                <h2>Lorem ipsum</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, vitae!</p>
+            <article class="strengths-article">
+                <h3 class="strengths-header">Lorem ipsum</h3>
+                <p class="strengths-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, vitae!
+                </p>
             </article>
 
-            <article>
-                <h2>Lorem ipsum</h2>
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, vitae!</p>
+            <article class="strengths-article">
+                <h3 class="strengths-header">Lorem ipsum</h2>
+                    <p class="strengths-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit,
+                        vitae!</p>
             </article>
         </section>
-        <section>
-            <h2>Czym się zajmujemy</h2>
+        <section class="what-we-do">
+            <h2 class="header-secondary">Czym się zajmujemy</h2>
             <ul>
                 <li><img src="./images/img.jpg" height="294" width="370"
                         alt="photo shows person typing on apple keyboard">
@@ -62,7 +66,7 @@
         </section>
 
         <section>
-            <h2>Nasz zespół</h2>
+            <h2 class="header-secondary">Nasz zespół</h2>
             <ul>
                 <li><img src="./images/stuff.jpg" height="260" width="270" alt="photo of Product Manager - John Doe">
                 </li>
@@ -82,7 +86,7 @@
         </div>
         <address>
             m. Warszawa, Aleje Jerozolimskie 21
-            <a href="mailto:info@example.com">info@example.com</a>
+            <a class="mail-footer" href="mailto:info@example.com">info@example.com</a>
             <a href="tel:+48111111111">+48111111111</a>
         </address>
     </footer>
