--- a/portfolio.html
+++ b/portfolio.html
@@ -19,7 +19,7 @@
         <p class="logo"><a href="./index.html"><span class="web-color">Web</span>Studio</a></p>
         <nav class="menu">
             <a href="#">Agencja</a>
-            <a href="./portfolio.html">Portfolio</a>
+            <a class="active" href="./portfolio.html">Portfolio</a>
             <a href="#">Kontakt</a>
         </nav>
         <div class="contact">
@@ -29,11 +29,11 @@
     </header>
     <main class="main-container">
         <div class="filters">
-            <button type="button" class="filter">Wszyskie</button>
-            <button type="button" class="filter">Strony</button>
-            <button type="button" class="filter">Aplikacje</button>
-            <button type="button" class="filter">Dizajn</button>
-            <button type="button" class="filter">Marketing</button>
+            <button type="button" class="btn filter">Wszyskie</button>
+            <button type="button" class="btn filter">Strony</button>
+            <button type="button" class="btn filter">Aplikacje</button>
+            <button type="button" class="btn filter">Dizajn</button>
+            <button type="button" class="btn filter">Marketing</button>
         </div>
         <section class="products">
             <ul class="products-list">
@@ -51,7 +51,7 @@
                 </li>
                 <li class="product app">
                     <img src="./images/seafood-restaurant.jpg" alt="logo restauracji seafood" width="370" height="294">
-                    <h3 class="title" Restauracja Seafood></h3>
+                    <h3 class="title">Restauracja Seafood</h3>
                     <p class="category-name">Aplikacja</p>
                 </li>
                 <li class="product marketing">
@@ -95,7 +95,7 @@
         </div>
         <address>
             m. Warszawa, Aleje Jerozolimskie 21
-            <a href="mailto:info@example.com">info@example.com</a>
+            <a class="mail-footer" href="mailto:info@example.com">info@example.com</a>
             <a href="tel:+48111111111">+48111111111</a>
         </address>
     </footer>
