--- a/portfolio.html
+++ b/portfolio.html
@@ -28,13 +28,13 @@
         </div>
     </header>
     <main class="main-container">
-        <div class="filters">
-            <button type="button" class="btn filter">Wszyskie</button>
-            <button type="button" class="btn filter">Strony</button>
-            <button type="button" class="btn filter">Aplikacje</button>
-            <button type="button" class="btn filter">Dizajn</button>
-            <button type="button" class="btn filter">Marketing</button>
-        </div>
+        <ul class="filters">
+            <li> <button type="button" class="btn filter">Wszyskie</button></li>
+            <li><button type="button" class="btn filter">Strony</button></li>
+            <li><button type="button" class="btn filter">Aplikacje</button></li>
+            <li><button type="button" class="btn filter">Dizajn</button></li>
+            <li><button type="button" class="btn filter">Marketing</button></li>
+        </ul>
         <section class="products">
             <ul class="products-list">
                 <li class="product sites">
