--- a/portfolio.html
+++ b/portfolio.html
@@ -93,7 +93,7 @@
         <div class="logo-container">
             <p class="logo"><span class="web-color">Web</span>Studio</p>
         </div>
-        <address>
+        <address class="contact">
             m. Warszawa, Aleje Jerozolimskie 21
             <a class="mail-footer" href="mailto:info@example.com">info@example.com</a>
             <a href="tel:+48111111111">+48111111111</a>
