--- a/index.html
+++ b/index.html
@@ -28,12 +28,11 @@
         </div>
     </header>
     <main class="main-content">
-
         <section class="landing">
             <h1>Efektywne rozwiązania dla waszego biznesu</h1>
             <button class="btn order" type="button">Zamów usługe</button>
         </section>
-        <section class="our-strengths">
+        <section class="section">
             <article class="strengths-article">
                 <h3 class="strengths-header">Lorem ipsum</h3>
                 <p class="strengths-description">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit, vitae!
@@ -52,7 +51,7 @@
                     vitae!</p>
             </article>
         </section>
-        <section class="what-we-do">
+        <section class="section">
             <h2 class="header-secondary">Czym się zajmujemy</h2>
             <ul>
                 <li><img src="./images/img.jpg" height="294" width="370"
@@ -65,7 +64,7 @@
             </ul>
         </section>
 
-        <section>
+        <section class="section">
             <h2 class="header-secondary">Nasz zespół</h2>
             <ul>
                 <li><img src="./images/stuff.jpg" height="260" width="270" alt="photo of Product Manager - John Doe">
