--- a/index.html
+++ b/index.html
@@ -11,20 +11,27 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
-    <header class="header">
-        <p class="logo"><a href="./index.html"><span class="web-color">Web</span>Studio</a></p>
-        <nav class="menu">
-            <a href="#">Agencja</a>
-            <a href="./portfolio.html">Portfolio</a>
-            <a href="#">Kontakt</a>
+    <header class="header line">
+        <p><a href="./index.html" class="logo"><span class="web-color">Web</span>Studio</a></p>
+        <nav>
+            <ul class="menu">
+                <li><a href="index.html">Agencja</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="#">Kontakt</a></li>
+            </ul>
         </nav>
-        <div class="contact">
-            <a href="mailto:info@devstudio.com">info@example.com</a>
-            <a href="tel:+48111111111">+48111111111</a>
+        <div>
+            <ul class="contact">
+                <li><a href="mailto:info@devstudio.com">info@example.com</a></li>
+                <li><a href="tel:+48111111111">+48 111 111 111</a></li>
+            </ul>
+            
         </div>
     </header>
     <main class="main-content">
