--- a/portfolio.html
+++ b/portfolio.html
@@ -11,12 +11,14 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.0.0/modern-normalize.min.css" />
     <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
     <header class="header line">
-        <p class="logo"><a href="./index.html"><span class="web-color">Web</span>Studio</a></p>
+        <p class="logo"><a href="./index.html" ><span class="web-color">Web</span>Studio</a></p>
         <nav class="menu">
             <a href="#">Agencja</a>
             <a class="active" href="./portfolio.html">Portfolio</a>
