--- a/portfolio.html
+++ b/portfolio.html
@@ -17,89 +17,137 @@
 </head>
 
 <body>
-    <header class="header line">
-        <p class="logo"><a href="./index.html" ><span class="web-color">Web</span>Studio</a></p>
-        <nav class="menu">
-            <a href="#">Agencja</a>
-            <a class="active" href="./portfolio.html">Portfolio</a>
-            <a href="#">Kontakt</a>
-        </nav>
-        <div class="contact">
-            <a href="mailto:info@devstudio.com">info@example.com</a>
-            <a href="tel:+48111111111">+48111111111</a>
+    <header class="page-header">
+        <div class="container container--row">
+            <a href="./index.html" class="link logo"><span class="logo--color">Web</span>Studio</a>
+            <nav class="nav">
+                <ul class="list">
+                    <li class="list__item"><a class="link hover" href="index.html">Agencja</a></li>
+                    <li class="list__item"><a class="link active " href="portfolio.html">Portfolio</a></li>
+                    <li class="list__item"><a class="link hover" href="#">Kontakt</a></li>
+                </ul>
+            </nav>
+            <ul class="contact contact__header">
+                <li class="item"><a class="link hover" href="mailto:info@devstudio.com">info@example.com</a></li>
+                <li class="item"><a class="link hover" href="tel:+48111111111">+48 111 111 111</a></li>
+            </ul>
         </div>
     </header>
     <main class="main-container">
-        <ul class="filters">
-            <li> <button type="button" class="btn filter">Wszyskie</button></li>
-            <li><button type="button" class="btn filter">Strony</button></li>
-            <li><button type="button" class="btn filter">Aplikacje</button></li>
-            <li><button type="button" class="btn filter">Dizajn</button></li>
-            <li><button type="button" class="btn filter">Marketing</button></li>
-        </ul>
-        <section class="products">
-            <ul class="products-list">
-                <li class="product sites">
-                    <img src="./images/laptop.jpg" alt="laptop ze widokiem na stronę www" width="370" height="294">
-                    <h3 class="title">Technocrack</h3>
-                    <p class="category-name">Strona internetowa</p>
-                </li>
-                <li class="product design">
-                    <img src="./images/curry-poster.jpg"
-                        alt="plakat przedstawiający dwóch graczy. Jeden z zespołu Golden State Warriors, drugi z zespołu New Orlean Pelicans"
-                        width="370" height="294">
-                    <h3 class="title">Grafika New Orlean vs Golden Star</h3>
-                    <p class="category-name">Dizajn</p>
-                </li>
-                <li class="product app">
-                    <img src="./images/seafood-restaurant.jpg" alt="logo restauracji seafood" width="370" height="294">
-                    <h3 class="title">Restauracja Seafood</h3>
-                    <p class="category-name">Aplikacja</p>
-                </li>
-                <li class="product marketing">
-                    <img src="./images/headphones.jpg" alt="słuchawki nauszne" width="370" height="294">
-                    <h3 class="title">Projekt Prime</h3>
-                    <p class="category-name">Marketing</p>
-                </li>
-                <li class="product app">
-                    <img src="./images/boxes.jpg" alt="dwa pudełka kartonowe" width="370" height="294">
-                    <h3 class="title">Projekt Boxes</h3>
-                    <p class="category-name">Aplikacja</p>
-                </li>
-                <li class="product sites">
-                    <img src="./images/screen.jpg" alt="monitor wyświetlający stronę internetową" width="370"
-                        height="294">
-                    <h3 class="title">Inspiration has no Borders</h3>
-                    <p class="category-name">Strona internetowa</p>
-                </li>
-                <li class="product design">
-                    <img src="./images/magazine.jpg" alt="magazyn" width="370" height="294">
-                    <h3 class="title">Magazyn Limited Edition</h3>
-                    <p class="category-name">Dizajn</p>
-                </li>
-                <li class="product marketing">
-                    <img src="./images/tag.jpg" alt="zawieszka z nazwą firmy" width="370" height="294">
-                    <h3 class="title">Projekt LAB</h3>
-                    <p class="category-name">Marketing</p>
-                </li>
-                <li class="product app">
-                    <img src="./images/macbook.jpg" alt="zdjęcie przedstawia macbooka oraz ręce osoby, która go używa"
-                        width="370" height="294">
-                    <h3 class="title">Growing Business</h3>
-                    <p class="category-name">Aplikacja</p>
-                </li>
+        <div class="container">
+            <ul>
+                <li> <button type="button" class="filter">Wszyskie</button></li>
+                <li><button type="button" class="filter">Strony</button></li>
+                <li><button type="button" class="filter">Aplikacje</button></li>
+                <li><button type="button" class="filter">Dizajn</button></li>
+                <li><button type="button" class="filter">Marketing</button></li>
             </ul>
+        </div>
+        <section class="section section--margin-bottom94">
+            <div class="container">
+                <ul class="products">
+                    <li class="list__product">
+                        <figure class="list__product">
+                            <img src="./images/laptop.jpg" alt="laptop ze widokiem na stronę www" width="370"
+                                height="294">
+                            <figcaption class="product__description">
+                                <h3 class="product__title">Technocrack</h3>
+                                <p class="category-name">Strona internetowa</p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li class="list__product">
+                        <figure class="list__product">
+                            <img src="./images/curry-poster.jpg"
+                                alt="plakat przedstawiający dwóch graczy. Jeden z zespołu Golden State Warriors, drugi z zespołu New Orlean Pelicans"
+                                width="370" height="294">
+                            <figcaption class="product__description">
+                                <h3 class="product__title">Grafika New Orlean vs Golden Star</h3>
+                                <p class="category-name">Dizajn</p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li class="list__product">
+                        <figure class="list__product">
+                            <img src="./images/seafood-restaurant.jpg" alt="logo restauracji seafood" width="370"
+                                height="294">
+                            <figcaption class="product__description">
+                                <h3 class="product__title">Restauracja Seafood</h3>
+                                <p class="category-name">Aplikacja</p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li class="list__product">
+                        <figure class="list__product">
+                            <img src="./images/headphones.jpg" alt="słuchawki nauszne" width="370" height="294">
+                            <figcaption class="product__description">
+                                <h3 class="product__title">Projekt Prime</h3>
+                                <p class="category-name">Marketing</p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li class="list__product">
+                        <figure class="list__product">
+                            <img src="./images/boxes.jpg" alt="dwa pudełka kartonowe" width="370" height="294">
+                            <figcaption class="product__description">
+                                <h3 class="product__title">Projekt Boxes</h3>
+                                <p class="category-name">Aplikacja</p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li class="list__product">
+                        <figure class="list__product">
+                            <img src="./images/screen.jpg" alt="monitor wyświetlający stronę internetową" width="370"
+                                height="294">
+                            <figcaption class="product__description">
+                                <h3 class="product__title">Inspiration has no Borders</h3>
+                                <p class="category-name">Strona internetowa</p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li class="list__product">
+                        <figure class="list__product">
+                            <img src="./images/magazine.jpg" alt="magazyn" width="370" height="294">
+                            <figcaption class="product__description">
+                                <h3 class="product__title">Magazyn Limited Edition</h3>
+                                <p class="category-name">Dizajn</p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li class="list__product">
+                        <figure class="list__product">
+                            <img src="./images/tag.jpg" alt="zawieszka z nazwą firmy" width="370" height="294">
+                            <figcaption class="product__description">
+                                <h3 class="product__title">Projekt LAB</h3>
+                                <p class="category-name">Marketing</p>
+                            </figcaption>
+                        </figure>
+                    </li>
+                    <li class="list__product">
+                        <figure class="list__product">
+                            <img src="./images/macbook.jpg"
+                                alt="zdjęcie przedstawia macbooka oraz ręce osoby, która go używa" width="370"
+                                height="294">
+                            <figcaption class="product__description">
+                                <h3 class="product__title">Growing Business</h3>
+                                <p class="category-name">Aplikacja</p>
+                            </figcaption>
+                        </figure>
+                    </li>
+
+                </ul>
+            </div>
         </section>
     </main>
-    <footer class="footer">
-        <div class="logo-container">
-            <p class="logo"><span class="web-color">Web</span>Studio</p>
+    <footer class="footer section--background-dark">
+        <div class="container container--align-start">
+            <p class="logo logo__footer"><span class="logo--color">Web</span>Studio</p>
+            <address class="contact contact__footer">
+                m. Warszawa, Aleje Jerozolimskie 21
+                <a class="link link__footer" href="mailto:info@example.com">info@example.com</a>
+                <a class="link link__footer" href="tel:+48111111111">+48 111 111 111</a>
+            </address>
         </div>
-        <address class="contact">
-            m. Warszawa, Aleje Jerozolimskie 21
-            <a class="mail-footer" href="mailto:info@example.com">info@example.com</a>
-            <a href="tel:+48111111111">+48111111111</a>
-        </address>
     </footer>
 </body>
 
