--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
                     <a class="link link-footer" href="tel:+48111111111">+48 111 111 111</a>
                 </address>
             </div>
-            <div class="footer-socials" style="border: 1px dashed red;">
+            <div class="footer-socials">
                 <h3 class="list-header">Dołącz do nas</h3>
                 <ul class="socials">
                     <div class="socials-container">
