changing styles for portfolio.html
changed margin for portfolio section

--- a/portfolio.html
+++ b/portfolio.html
@@ -55,7 +55,7 @@
         </div>
     </header>
     <main>
-        <section class="section --margin-100">
+        <section class="section section-portfolio">
             <div class="container">
                 <ul class="list --gap-8">
                     <li class="list-item"><button type="button" class="filter">Wszyskie</button></li>
@@ -65,9 +65,7 @@
                     <li class="list-item"><button type="button" class="filter">Marketing</button></li>
                 </ul>
             </div>
-        </section>
 
-        <section class="section">
             <div class="container">
                 <ul class="list products">
                     <li class="list-item">
