--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="./index.html" class="link logo no-hover">
                 <span class="logo--color">Web</span>Studio</a>
             <nav class="nav">
-                <ul class="list list-header">
+                <ul class="list">
                     <li class="list-item"><a class="link active" href="index.html">Agencja</a></li>
                     <li class="list-item"><a class="link" href="portfolio.html">Portfolio</a></li>
                     <li class="list-item"><a class="link" href="#">Kontakt</a></li>
